// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button adds correct classes for button types: DisabledButton 1`] = `
<button
  aria-disabled="true"
  className="govuk-button govuk-button--disabled"
  disabled={true}
  type="submit"
>
  Submit
</button>
`;

exports[`Button adds correct classes for button types: ReverseButton 1`] = `
<button
  aria-disabled="false"
  className="govuk-button govuk-button--reverse"
  type="submit"
>
  Submit
</button>
`;

exports[`Button adds correct classes for button types: SecondaryButton 1`] = `
<button
  aria-disabled="false"
  className="govuk-button govuk-button--secondary"
  type="submit"
>
  Submit
</button>
`;

exports[`Button matches snapshot: PlainButton 1`] = `
<button
  aria-disabled="false"
  className="govuk-button"
  type="submit"
>
  Submit
</button>
`;

exports[`ButtonLink adds correct classes for button types: DisabledButton 1`] = `
<a
  aria-disabled="true"
  className="govuk-button govuk-button--disabled"
  draggable={false}
  href="/"
  role="button"
>
  Submit
</a>
`;

exports[`ButtonLink adds correct classes for button types: ReverseButton 1`] = `
<a
  aria-disabled="false"
  className="govuk-button govuk-button--reverse"
  draggable={false}
  href="/"
  role="button"
>
  Submit
</a>
`;

exports[`ButtonLink adds correct classes for button types: SecondaryButton 1`] = `
<a
  aria-disabled="false"
  className="govuk-button govuk-button--secondary"
  draggable={false}
  href="/"
  role="button"
>
  Submit
</a>
`;

exports[`ButtonLink matches snapshot: PlainButton 1`] = `
<a
  aria-disabled="false"
  className="govuk-button"
  draggable={false}
  href="/"
  role="button"
>
  Submit
</a>
`;
